# ADJIC-bot

./: CMakeLists.txt  README.md  package.xml  test.txt
Expo/cobot_scripts/arucos/: aruco_robot.py  arucos.py
Expo/launch/: arucos.launch  cobot_pick.launch  cobot_place.launch
Expo/launch/rviz/: conf.rviz  (+1 more)
Minichallenges/minichal1/: CMakeLists.txt  package.xml
Minichallenges/minichal2/: CMakeLists.txt  package.xml
Minichallenges/minichal3/: CMakeLists.txt  package.xml
Minichallenges/minichal4/: CMakeLists.txt  package.xml
Minichallenges/minichal5/: CMakeLists.txt
Minichallenges/minichal5/puzzlebot_rviz/: CMakeLists.txt  package.xml
Minichallenges/minichal5/puzzlebot_rviz/config/: config.rviz  config_file_m1.rviz
Minichallenges/minichal5/puzzlebot_rviz/launch/: gazebo.launch  puzzlebot_rviz.launch  rviz.launch  sample.launch
Minichallenges/minichal5/puzzlebot_rviz/src/: puzzlebot_tf_broadcaster.py
Minichallenges/minichal5/puzzlebot_rviz/urdf/: puzzlebot.urdf.xacro  sample.urdf.xacro
Minichallenges/minichal5/puzzlebot_sim/: CMakeLists.txt  package.xml
Minichallenges/minichal5/puzzlebot_sim/scripts/: bug_0.py  bug_2.py  mini_challenge1.py  move_forward_some_time.py  p_control.py  puzzlebot_kinematic_model.py
Minichallenges/minichal6/: CMakeLists.txt  package.xml
Minichallenges/minichal7/: CMakeLists.txt  package.xml
Minichallenges/puzzlebot_sim/: CMakeLists.txt  package.xml
Reto/: CMakeLists.txt  camara_aruco.py
Reto/launch/: puzzlebot_real.launch  puzzlebot_real_2.launch  puzzlebot_sim.launch
Reto/scripts/: camara_aruco.py  kalman_filter_m.py  lidar_analisis.py  map_generation.py  odometry.py
expo/adjic_xarm/: CMakeLists.txt  package.xml
include/: env_run  minichal5.launch  params.yaml
pgm_maps/: mymap.yaml
robot/urdf/: parameters.xacro  parameters_real.xacro  puzzlebot_lidar.xacro
rviz/: rviz_real.rviz  rviz_sim.rviz
scripts/: bug0.py  bug2.py
world/: ADJIC_map.world
worlds/: ADJIC_map.world
(+157 files in other folders)
